--- a/src/trainings.html
+++ b/src/trainings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Business Page</title>
+    <title>Business practice</title>
   </head>
   <body>
     <header id="header" class="header">
@@ -52,7 +52,7 @@
                   <a href="./services-page.html">Услуги</a>
                 </li>
                 <li class="header-menu__item">
-                  <a href="./trainings.html">Треннинги</a>
+                  <a href="./trainings.html"> Треннинги </a>
                 </li>
                 <li class="header-menu__item">Блог</li>
               </ul>
@@ -132,80 +132,9 @@
     </header>
 
     <main>
-      <section class="marketing">
         <div class="container">
-          <h3 class="marketing-title">
-            Разрабатываем маркетинг-план: дорожная карта достижения целей
-          </h3>
-          <div class="marketing-items">
-            <div class="marketing-item">
-              <object data="./assets/svg/marketing-cube.svg"></object>
-              <p>Делаем прогноз развития рынка</p>
-            </div>
-            <div class="marketing-item">
-              <object data="./assets/svg/marketing-cube.svg"></object>
-              <p>Проводим сравнительный анализ стратегий конкурентов</p>
-            </div>
-            <div class="marketing-item">
-              <object data="./assets/svg/marketing-cube.svg"></object>
-              <p>Определяем точки роста</p>
-            </div>
-            <div class="marketing-item">
-              <object data="./assets/svg/marketing-cube.svg"></object>
-              <p>Ставим объективные цели</p>
-            </div>
-            <div class="marketing-item">
-              <object data="./assets/svg/marketing-cube.svg"></object>
-              <p>Разрабатываем план и модель контроля его выполнения</p>
-            </div>
-          </div>
-          <div class="marketing-description">
-            <h3>Описание услуги</h3>
-
-            <p>
-              Любая компания ставит себе цель непрерывного развития, которая
-              отражается в итоговом плане действий по ее достижению. Основным
-              измерением достижения цели является рост прибыли по результатам
-              планируемого периода. Понимание траектории развития рынка,
-              положения и стратегий его основных участников, позволяет правильно
-              оценить свои возможности и поставить объективно достижимые цели.
-            </p>
-
-            <p>
-              Конкретный план действий по достижению целей разрабатывается на
-              основе потребительских трендов и прогноза действий конкурентов.
-            </p>
-
-            <p>
-              Математическая модель контроля позволяет на основе сравнения
-              плановых и фактических измеряемых величин контролировать ситуацию
-              и своевременно предпринимать необходимые действия.
-            </p>
-
-            <p>Основные этапы разработки маркетинг-плана:</p>
-
-            <ul class="marketing-mainStages">
-              <li>Интервью с сотрудниками компании и потребителями</li>
-              <li>Сбор информации о рынках из открытых источников</li>
-              <li>
-                Анализ внешней информации: SWOT, BCG, сравнительный анализ по 4Р
-                маркетинга
-              </li>
-              <li>
-                Анализ внутренней информации: динамика основных показателей с
-                определением причин изменений
-              </li>
-              <li>Совместное обсуждение целей и плана действий</li>
-            </ul>
-          </div>
-
-          <div class="marketing-form">
-            <input type="text" placeholder="Ваше имя" />
-            <input type="email" placeholder="Email" />
-            <button class="marketing-btn">Получить консультацию</button>
-          </div>
+            <h3>trainings</h3>
         </div>
-      </section>
     </main>
 
     <footer class="footer">
