--- a/src/training.html
+++ b/src/training.html
@@ -47,16 +47,16 @@
           <div class="header-nav__wrapper">
             <nav class="header-nav">
               <ul class="header-menu">
-                <li class="header-menu__item active">
-                  <a href="./index.html">Консультации</a>
+                <li class="burger-menu__item">
+                  <a href="index.html">Консультации</a>
                 </li>
-                <li class="header-menu__item">
-                  <a href="./index.html#services">Услуги</a>
+                <li class="burger-menu__item">
+                  <a href="index.html#services">Услуги</a>
                 </li>
-                <li class="header-menu__item">
-                  <a href="./trainings.html"> Треннинги </a>
+                <li class="burger-menu__item">
+                  <a href="trainings.html">Треннинги</a>
                 </li>
-                <li class="header-menu__item">
+                <li class="burger-menu__item">
                   <a
                     href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
                     target="_blank"
@@ -139,119 +139,219 @@
       </div>
     </header>
 
-    <main id="main">
-      <section class="intro">
+    <main>
+      <section class="training">
+        <div class="training-bg">
+          <img src="./assets/svg/bg.svg" alt="bg" />
+        </div>
         <div class="container">
-          <div class="intro-wrapper">
-            <div class="intro-right">
-              <h3 class="intro-title">Создаем решения</h3>
-              <p class="intro-subtitle">Для роста бизнеса</p>
-              <p class="intro-text">
-                На основе анализа данных с алгоритмами реализации
-              </p>
-              <button class="intro-btn modal-btn">Обсудить проблему</button>
-              <object
-                class="intro-arrowdown"
-                data="./assets/svg/arrow-down.svg"
-              ></object>
-            </div>
-            <div class="intro-left">
-              <img src="./assets/images/intro-cube.png" alt="image" />
-            </div>
-          </div>
-          <div class="intro-line1">
-            <img src="./assets/svg/arrow.svg" alt="arrow" />
-          </div>
-          <div class="intro-line1 intro-line1_small">
-            <img src="./assets/svg/arrow1small.svg" alt="arrow" />
-          </div>
-          <div class="intro-rhomb">
-            <img src="./assets/svg/rhomb.svg" alt="rhomb" />
-          </div>
-          <div class="intro-line2">
-            <img src="./assets/svg/arrow1.svg" alt="arrow" />
-          </div>
-          <div class="intro-line2 intro-line2_small">
-            <img src="./assets/svg/arrow2-small.svg" alt="arrow" />
+          <p class="breadcrumb">
+            <span>Главная </span> <span>/</span> <span>Тренинги </span>
+            <span>/</span> Бизнес-тренинг «Маркетинг – технология роста»
+          </p>
+          <div class="training-wrapper">
+            <h3 class="training-title">
+              Бизнес-тренинг «Маркетинг – технология роста»
+            </h3>
+            <p class="training-subtitle">
+              Для кого: руководители компаний, маркетологи, продавцы
+            </p>
+            <p class="training-text">Цели бизнес-тренинга:</p>
+            <ul class="training-list">
+              <li>Определение маркетинга как технологии роста</li>
+              <li>Организация маркетинга как сквозного бизнес-процесса</li>
+              <li>
+                Получение практических навыков применения технологии маркетинга
+              </li>
+            </ul>
+            <button class="training-btn">
+              <span>Подробнее </span>
+              <object data="./assets/svg/arrow-right.svg"></object>
+            </button>
           </div>
         </div>
       </section>
+      <section class="training-program relative">
+        <div class="container">
+          <div class="training-program__wrapper">
+            <h3 class="training-program__title">Программа бизнес тренинга</h3>
+            <div class="training-program__items">
+              <div class="training-program__item">
+                <h3 class="training-program__heading">
+                  Функция маркетинга как бизнес-технологии
+                </h3>
+                <ul class="training-program__list">
+                  <li>
+                    Рынок как динамическая система взаимодействия
+                    потребительской и конкурентной сред
+                  </li>
+                  <li>
+                    Поиск точек роста в непрерывно меняющейся рыночной среде
+                  </li>
 
-      <section class="questions">
-        <div class="container">
-          <div class="questions-wrapper">
-            <div class="questions-items">
-              <div class="questions-block">
-                <div class="questions-item">
-                  <object data="./assets/svg/questions-logo.svg"></object>
-                  <p class="questions-text">
-                    Как найти точки роста и определить цели?
+                  <li>
+                    Прибыль компании как производная от управления маркетингом
+                  </li>
+                  <li>
+                    Концепция 4Р маркетинга как универсальная модель реализации
+                    рыночных возможностей
+                  </li>
+                </ul>
+              </div>
+              <div class="training-program__item">
+                <h3 class="training-program__heading">
+                  Практический инструментарий
+                </h3>
+                <ul class="training-program__list">
+                  <li>
+                    Количественные и качественные методы исследования рынка.
+                    Первичная информация как основа формирования эффективной
+                    стратегии. Отсутствие системности в получении и обработке
+                    информации – ключевые проблемы. Целеполагание на основе
+                    исследований.
+                  </li>
+                  <li>
+                    Формирование товарной матрицы. Технология категорийного
+                    менеджмента. Кросс -конкурентный анализ, определение ролей
+                    продукта в товарной матрице.
+                  </li>
+
+                  <li>
+                    Ценообразование на основе рыночной ценности продукта. Выбор
+                    ценового позиционирования относительно конкурентов.
+                    Управление маржинальностью.
+                  </li>
+                  <li>
+                    Управление коммуникациями с рынком. «Золотое» правило
+                    продвижения. Правила выбора каналов коммуникаций. Модели
+                    оценки эффективности затрат. Технологии интернет-маркетинга
+                    как эффективное дополнение к традиционным каналам
+                    продвижения. Основные ошибки в стратегии продвижения
+                  </li>
+                  <li>
+                    Аналитика данных. Оцифрованная картина рынка как основа
+                    принятия эффективных решений. Типовые формы анализа основных
+                    показателей.
+                  </li>
+                </ul>
+              </div>
+              <div class="training-program__item">
+                <h3 class="training-program__heading">
+                  Организация маркетинга в компании
+                </h3>
+                <ul class="training-program__list">
+                  <li>
+                    Принципиальная схема бизнес-процесса маркетинга. Наиболее
+                    узкие места. Критерии оценки эффективности
+                  </li>
+                  <li>
+                    Маркетинг-план как дорожная карта развития. Структура. Этапы
+                    планирования. Контрольные точки выполнения.
+                  </li>
+
+                  <li>
+                    Взаимодействие служб маркетинга и продаж как основа успешной
+                    реализации планов. Устранение разрывов в понимании рыночной
+                    ситуации. Создание общего информационного поля.
+                  </li>
+                </ul>
+              </div>
+              <div class="training-program__item">
+                <h3 class="training-program__heading">Кейсы-примеры:</h3>
+                <ul class="training-program__list">
+                  <li>«Догнать и перегнать лидера рынка»</li>
+                  <li>«Увеличить прибыль на падающем рынке»</li>
+                  <li>«Comeback бывшего лидера»</li>
+                  <li>«Повышаем маржинальность, не выходя из кабинета»</li>
+                </ul>
+              </div>
+              <div class="training-program__item">
+                <h3 class="training-program__heading">Кейсы-примеры:</h3>
+                <p>
+                  С заказчиком предварительно согласуется наиболее актуальная
+                  проблема. В заключительной части тренинга в ходе совместного
+                  обсуждения определяются подходы к ее решению. Результатом
+                  является определение целей и плана действий по их достижению.
+                </p>
+              </div>
+              <div class="training-program__item">
+                <h3 class="training-program__heading">Бонусы</h3>
+                <div class="gap">
+                  <p>
+                    5 часов бесплатных консультаций в течение месяца после
+                    проведения тренинга.
                   </p>
-                </div>
-                <div class="questions-item">
-                  <object data="./assets/svg/questions-logo.svg"></object>
-                  <p class="questions-text">
-                    Как избежать проблем на старте нового бизнеса?
-                  </p>
+                  <p>Набор шаблонов для анализа ключевых показателей.</p>
                 </div>
               </div>
-              <div class="questions-block">
-                <div class="questions-item">
-                  <object data="./assets/svg/questions-logo.svg"></object>
-                  <p class="questions-text">
-                    Как увеличить прибыль, управляя ценами?
-                  </p>
-                </div>
-                <div class="questions-item">
-                  <object data="./assets/svg/questions-logo.svg"></object>
-                  <p class="questions-text">
-                    Как не попасть в "черную дыру" затрат на продвижение?
-                  </p>
-                </div>
+              <div class="training-program__item">
+                <h3 class="training-program__heading">
+                  Преимущества бизнес-тренинга:
+                </h3>
+                <ul class="training-program__list">
+                  <li>Составлен на основе опыта решения конкретных задач</li>
+                  <li>
+                    Только необходимый минимум теории, не рассматривается плохо
+                    применяемый на практике инструментарий
+                  </li>
+                  <li>Акцент на реальных примерах с разбором ошибок</li>
+                  <li>
+                    Направлен на практическую реализацию, начиная с завтрашнего
+                    дня
+                  </li>
+                </ul>
+              </div>
+              <div class="training-program__item">
+                <h3 class="training-program__heading">Форматы проведения:</h3>
+                <ul class="training-program__list">
+                  <li>
+                    Групповой онлайн-формат, продолжительность 3 дня, по 4 часа
+                    в день
+                  </li>
+                  <li>
+                    Индивидуальный онлайн-формат, продолжительность 2 дня, по 4
+                    часа в день
+                  </li>
+                  <li>
+                    групповой офлайн-формат, продолжительность 2 дня, по 8 часов
+                    в день
+                  </li>
+                </ul>
               </div>
             </div>
+            <form class="form">
+              <div class="bottom-bg">
+                <img src="./assets/svg/bottom-bg.svg" alt="bg" />
+              </div>
+              <div class="marketing-form">
+                <div class="div">
+                  <input
+                    class="marketing-name"
+                    type="text"
+                    placeholder="Ваше имя"
+                  />
+                  <p class="marketing-warning-name">поле обязательно*</p>
+                </div>
+                <div class="div">
+                  <input
+                    class="marketing-email"
+                    type="email"
+                    placeholder="Email"
+                  />
+                  <p class="marketing-warning-email">поле обязательно*</p>
+                </div>
+
+                <button class="marketing-btn">Получить консультацию</button>
+              </div>
+            </form>
           </div>
         </div>
-      </section>
-      <section class="services" id="services">
-        <div class="container">
-          <div class="services-wrapper">
-            <h2 class="services-title">Услуги</h2>
-            <div class="services-rhomb">
-              <img src="./assets/svg/services-rhomb.svg" alt="services rhomb" />
-            </div>
-            <div class="services-arrow">
-              <img src="./assets/svg/services-arrow.svg" alt="services arrow" />
-            </div>
-            <div class="services-arrowsmall">
-              <img src="./assets/svg/services-arrowsmall.svg" alt="arrow" />
-            </div>
-            <div class="services-blocks">
-              <a href="services-page.html" class="services-h services-item">
-                <object data="./assets/svg/idea.svg"></object>
-                <p>
-                  Повышаем эффективность продвижения: аудит существующей модели
-                </p>
-              </a>
-              <a href="services-page.html" class="services-a services-item">
-                <object data="./assets/svg/marketing.svg"></object>
-                <p>
-                  Разрабатываем маркетинг-план: дорожная карта достижения целей
-                </p>
-              </a>
-              <a href="services-page.html" class="services-m services-item">
-                <object data="./assets/svg/search.svg"></object>
-                <p>Находим скрытую прибыль: анализ модели ценообразования</p>
-              </a>
-              <a href="services-page.html" class="services-f services-item">
-                <object data="./assets/svg/startup.svg"></object>
-                <p>Запускаем новый проект: start-up маркетинг</p>
-              </a>
-            </div>
-          </div>
+        <div class="cube-arrow">
+          <img src="./assets/svg/cube-arrow.svg" alt="bg" />
         </div>
       </section>
     </main>
+
     <footer class="footer">
       <div class="container">
         <div class="footer-wrapper">
@@ -362,22 +462,10 @@
       <div class="burger-nav__wrapper">
         <nav class="burger-nav">
           <ul class="burger-menu">
-            <li class="burger-menu__item active">
-              <a href="index.html">Консультации</a>
-            </li>
-            <li class="burger-menu__item">
-              <a href="index.html#services">Услуги</a>
-            </li>
-            <li class="burger-menu__item">
-              <a href="trainings.html">Треннинги</a>
-            </li>
-            <li class="burger-menu__item">
-              <a
-                href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-                target="_blank"
-                >Блог</a
-              >
-            </li>
+            <li class="burger-menu__item">Консультации</li>
+            <li class="burger-menu__item">Услуги</li>
+            <li class="burger-menu__item">Треннинги</li>
+            <li class="burger-menu__item">Блог</li>
           </ul>
         </nav>
         <div class="burger-contacts">
@@ -430,56 +518,6 @@
                 d="M24 12C24 15.1826 22.7357 18.2348 20.4853 20.4853C18.2348 22.7357 15.1826 24 12 24C8.8174 24 5.76516 22.7357 3.51472 20.4853C1.26428 18.2348 0 15.1826 0 12C0 8.8174 1.26428 5.76516 3.51472 3.51472C5.76516 1.26428 8.8174 0 12 0C15.1826 0 18.2348 1.26428 20.4853 3.51472C22.7357 5.76516 24 8.8174 24 12ZM12.4305 8.859C11.2635 9.345 8.9295 10.35 5.4315 11.874C4.8645 12.099 4.566 12.321 4.539 12.537C4.494 12.9015 4.9515 13.0455 5.574 13.242L5.8365 13.3245C6.4485 13.524 7.2735 13.7565 7.701 13.7655C8.091 13.7745 8.5245 13.6155 9.003 13.2855C12.2715 11.079 13.959 9.9645 14.064 9.9405C14.139 9.9225 14.244 9.9015 14.313 9.9645C14.3835 10.026 14.376 10.1445 14.3685 10.176C14.3235 10.3695 12.528 12.0375 11.5995 12.9015C11.31 13.1715 11.1045 13.362 11.0625 13.4055C10.97 13.5 10.876 13.593 10.7805 13.6845C10.2105 14.2335 9.7845 14.6445 10.803 15.3165C11.2935 15.6405 11.6865 15.906 12.078 16.173C12.504 16.464 12.93 16.7535 13.482 17.1165C13.6215 17.2065 13.7565 17.304 13.887 17.397C14.3835 17.751 14.832 18.069 15.3825 18.018C15.7035 17.988 16.035 17.688 16.203 16.788C16.6005 14.6625 17.382 10.059 17.562 8.1615C17.573 8.00376 17.5664 7.84529 17.5425 7.689C17.5284 7.56288 17.4673 7.44669 17.3715 7.3635C17.235 7.26928 17.0723 7.22047 16.9065 7.224C16.4565 7.2315 15.762 7.473 12.4305 8.859Z"
               />
             </svg>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal">
-      <div class="modal-body">
-        <div class="modal-content">
-          <div class="modal-close">
-            <svg
-              width="36"
-              height="36"
-              viewBox="0 0 36 36"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M6 30L30 6M6 6L30 30"
-                stroke="#282C37"
-                stroke-width="2.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </div>
-          <h3>Оставьте заявку</h3>
-          <div class="form">
-            <form class="modal-form">
-              <div>
-                <input class="modal-name" type="text" placeholder="Ваше имя" />
-                <p class="modal-warning-name">поле обязательно*</p>
-              </div>
-              <div>
-                <input class="modal-email" type="email" placeholder="Email" />
-                <p class="modal-warning-email">поле обязательно*</p>
-              </div>
-              <div>
-                <textarea
-                  class="modal-text"
-                  name="problem"
-                  cols="39"
-                  rows="10"
-                  placeholder="Пожалуйста опишите вашу проблему"
-                ></textarea>
-                <p class="modal-warning-text">поле обязательно*</p>
-              </div>
-              <button class="modal-submit">Отправить</button>
-
-              <p class="modal-success">Ваша заявка успешна отправлена!</p>
-            </form>
           </div>
         </div>
       </div>
