--- a/src/services-page.html
+++ b/src/services-page.html
@@ -47,14 +47,22 @@
           <div class="header-nav__wrapper">
             <nav class="header-nav">
               <ul class="header-menu">
-                <li class="header-menu__item">Консультации</li>
                 <li class="header-menu__item">
-                  <a href="./services-page.html">Услуги</a>
+                  <a href="./index.html">Консультации</a>
+                </li>
+                <li class="header-menu__item">
+                  <a href="./index.html#services">Услуги</a>
                 </li>
                 <li class="header-menu__item">
                   <a href="./trainings.html">Треннинги</a>
                 </li>
-                <li class="header-menu__item">Блог</li>
+                <li class="header-menu__item">
+                  <a
+                    href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                    target="_blank"
+                    >Блог</a
+                  >
+                </li>
               </ul>
             </nav>
             <div class="header-contacts">
@@ -133,7 +141,16 @@
 
     <main>
       <section class="marketing">
+        <div class="marketing-bg">
+          <img src="./assets/svg/bg.svg" alt="bg" />
+        </div>
         <div class="container">
+          <p class="breadcrumb">
+            <span>Главная</span> <span>/</span> <span>Услуги</span>
+            <span>/</span> Разрабатываем маркетинг-план: дорожная карта
+            достижения целей
+          </p>
+
           <h3 class="marketing-title">
             Разрабатываем маркетинг-план: дорожная карта достижения целей
           </h3>
@@ -161,29 +178,30 @@
           </div>
           <div class="marketing-description">
             <h3>Описание услуги</h3>
+            <div class="texts">
+              <p>
+                Любая компания ставит себе цель непрерывного развития, которая
+                отражается в итоговом плане действий по ее достижению. Основным
+                измерением достижения цели является рост прибыли по результатам
+                планируемого периода. Понимание траектории развития рынка,
+                положения и стратегий его основных участников, позволяет
+                правильно оценить свои возможности и поставить объективно
+                достижимые цели.
+              </p>
 
-            <p>
-              Любая компания ставит себе цель непрерывного развития, которая
-              отражается в итоговом плане действий по ее достижению. Основным
-              измерением достижения цели является рост прибыли по результатам
-              планируемого периода. Понимание траектории развития рынка,
-              положения и стратегий его основных участников, позволяет правильно
-              оценить свои возможности и поставить объективно достижимые цели.
-            </p>
+              <p>
+                Конкретный план действий по достижению целей разрабатывается на
+                основе потребительских трендов и прогноза действий конкурентов.
+              </p>
 
-            <p>
-              Конкретный план действий по достижению целей разрабатывается на
-              основе потребительских трендов и прогноза действий конкурентов.
-            </p>
+              <p>
+                Математическая модель контроля позволяет на основе сравнения
+                плановых и фактических измеряемых величин контролировать
+                ситуацию и своевременно предпринимать необходимые действия.
+              </p>
 
-            <p>
-              Математическая модель контроля позволяет на основе сравнения
-              плановых и фактических измеряемых величин контролировать ситуацию
-              и своевременно предпринимать необходимые действия.
-            </p>
-
-            <p>Основные этапы разработки маркетинг-плана:</p>
-
+              <p>Основные этапы разработки <a href="#">маркетинг-плана</a>:</p>
+            </div>
             <ul class="marketing-mainStages">
               <li>Интервью с сотрудниками компании и потребителями</li>
               <li>Сбор информации о рынках из открытых источников</li>
@@ -198,12 +216,31 @@
               <li>Совместное обсуждение целей и плана действий</li>
             </ul>
           </div>
+          <form class="form">
+            <div class="bottom-bg">
+              <img src="./assets/svg/bottom-bg.svg" alt="bg" />
+            </div>
+            <div class="marketing-form">
+              <div class="div">
+                <input
+                  class="marketing-name"
+                  type="text"
+                  placeholder="Ваше имя"
+                />
+                <p class="marketing-warning-name">поле обязательно*</p>
+              </div>
+              <div class="div">
+                <input
+                  class="marketing-email"
+                  type="email"
+                  placeholder="Email"
+                />
+                <p class="marketing-warning-email">поле обязательно*</p>
+              </div>
 
-          <div class="marketing-form">
-            <input type="text" placeholder="Ваше имя" />
-            <input type="email" placeholder="Email" />
-            <button class="marketing-btn">Получить консультацию</button>
-          </div>
+              <button class="marketing-btn">Получить консультацию</button>
+            </div>
+          </form>
         </div>
       </section>
     </main>
@@ -267,5 +304,128 @@
         </div>
       </div>
     </footer>
+
+    <div class="burger">
+      <div class="burger-close">
+        <svg
+          width="36"
+          height="36"
+          viewBox="0 0 36 36"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M6 30L30 6M6 6L30 30"
+            stroke="#282C37"
+            stroke-width="2.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </div>
+      <div class="burger-logo">
+        <svg
+          width="64"
+          height="69"
+          viewBox="0 0 64 69"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M39.4898 35.8284C36.9399 37.2568 35.3687 39.8968 35.3687 42.7547C35.3687 49.3023 35.3687 61.1477 35.3687 67.0005C35.3687 67.7153 35.7602 68.375 36.3989 68.7299C37.0377 69.0898 37.8207 69.0898 38.4595 68.7299C43.6418 65.826 54.0837 59.9782 59.8791 56.7295C62.429 55.3 64.0002 52.661 64.0002 49.8071C64.0002 43.2546 64.0002 31.4111 64.0002 25.5603C64.0002 24.8456 63.6087 24.1858 62.9699 23.8284C62.3363 23.4716 61.5482 23.4716 60.9094 23.8284C55.7322 26.7313 45.2903 32.5796 39.4898 35.8284Z"
+            fill="#287EE7"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M1.04831e-07 49.7947C-3.42959e-06 52.654 1.57012 55.2933 4.11889 56.723C9.91912 59.9721 20.3639 65.8256 25.5428 68.7299C26.1811 69.0898 26.9636 69.0898 27.6019 68.7299C28.2403 68.375 28.6315 67.7152 28.6316 67.0003C28.6316 61.1519 28.6316 49.3149 28.6316 42.7666C28.6316 39.9083 27.0614 37.268 24.5132 35.8394C18.7135 32.5877 8.26976 26.7332 3.08883 23.8285C2.4515 23.4716 1.66644 23.4716 1.02963 23.8285C0.392309 24.1859 3.09451e-05 24.8457 3.00621e-05 25.56C2.28314e-05 31.4095 8.19939e-06 43.2464 1.04831e-07 49.7947Z"
+            fill="#57A3FF"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M6.0974 14.1151C5.45128 14.501 5.05274 15.2135 5.05273 15.9848C5.05273 16.7561 5.45127 17.4691 6.0974 17.8545C11.3531 20.9904 21.9455 27.3087 27.8269 30.8187C30.4125 32.3613 33.5987 32.3613 36.1842 30.8187C42.0657 27.3098 52.6534 20.9943 57.9028 17.86C58.5505 17.4746 58.9475 16.7615 58.9475 15.9903C58.9475 15.219 58.5505 14.506 57.9028 14.1206C52.6481 10.9852 42.0605 4.66638 36.1738 1.15695C33.5883 -0.385647 30.4021 -0.38565 27.8165 1.15694C21.935 4.66528 11.3515 10.9808 6.0974 14.1151Z"
+            fill="#9FCDFF"
+          />
+        </svg>
+      </div>
+
+      <div class="burger-nav__wrapper">
+        <nav class="burger-nav">
+          <ul class="burger-menu">
+            <li class="burger-menu__item">
+              <a href="index.html">Консультации</a>
+            </li>
+            <li class="burger-menu__item">
+              <a href="index.html#services">Услуги</a>
+            </li>
+            <li class="burger-menu__item">
+              <a href="trainings.html">Треннинги</a>
+            </li>
+            <li class="burger-menu__item">
+              <a
+                href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                target="_blank"
+                >Блог</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <div class="burger-contacts">
+          <div class="burger-facebook">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g clip-path="url(#clip0_7_500)">
+                <path
+                  d="M24 12.074C24 5.40499 18.6269 -0.00100708 11.9999 -0.00100708C5.36995 0.00049292 -0.00305176 5.40499 -0.00305176 12.0755C-0.00305176 18.101 4.38595 23.096 10.1219 24.002V15.5645H7.07695V12.0755H10.1249V9.41299C10.1249 6.38749 11.9174 4.71649 14.6579 4.71649C15.9719 4.71649 17.3444 4.95199 17.3444 4.95199V7.92199H15.8309C14.3414 7.92199 13.8764 8.85349 13.8764 9.80899V12.074H17.2034L16.6724 15.563H13.8749V24.0005C19.6109 23.0945 24 18.0995 24 12.074Z"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_7_500">
+                  <rect width="24" height="24" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+          </div>
+          <div class="burger-whatsapp">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g clip-path="url(#clip0_7_494)">
+                <path
+                  d="M20.4015 3.48901C19.3012 2.37853 17.9909 1.49813 16.547 0.89912C15.103 0.300112 13.5543 -0.00552745 11.991 1.29606e-05C5.4405 1.29606e-05 0.102 5.33701 0.096 11.889C0.096 13.9875 0.645 16.029 1.6815 17.8365L0 24L6.306 22.347C8.05051 23.2964 10.0049 23.794 11.991 23.7945H11.997C18.549 23.7945 23.886 18.4575 23.892 11.8995C23.8935 10.3366 23.5857 8.78879 22.9864 7.34533C22.3871 5.90187 21.5081 4.59126 20.4 3.48901H20.4015ZM11.991 21.7815C10.2195 21.7821 8.48055 21.3054 6.957 20.4015L6.597 20.1855L2.856 21.1665L3.855 17.517L3.621 17.1405C2.63071 15.566 2.10697 13.7431 2.1105 11.883C2.1105 6.44401 6.546 2.00701 11.997 2.00701C13.2956 2.00468 14.5818 2.25942 15.7815 2.75655C16.9812 3.25368 18.0706 3.98335 18.987 4.90351C19.9065 5.82009 20.6355 6.90965 21.1319 8.10936C21.6282 9.30907 21.8822 10.5952 21.879 11.8935C21.873 17.352 17.4375 21.7815 11.991 21.7815ZM17.4135 14.3805C17.118 14.232 15.6585 13.5135 15.384 13.4115C15.111 13.314 14.9115 13.263 14.7165 13.56C14.517 13.8555 13.947 14.529 13.776 14.7225C13.605 14.922 13.428 14.9445 13.131 14.7975C12.8355 14.6475 11.877 14.3355 10.743 13.32C9.858 12.5325 9.2655 11.5575 9.0885 11.262C8.9175 10.965 9.072 10.806 9.2205 10.6575C9.351 10.5255 9.516 10.3095 9.6645 10.1385C9.8145 9.96751 9.864 9.84151 9.9615 9.64351C10.059 9.44251 10.0125 9.27151 9.939 9.12301C9.864 8.97451 9.2715 7.50901 9.021 6.91801C8.781 6.33451 8.5365 6.41551 8.3535 6.40801C8.1825 6.39751 7.983 6.39751 7.7835 6.39751C7.63285 6.40126 7.48459 6.4361 7.34804 6.49986C7.21149 6.56362 7.08959 6.65491 6.99 6.76801C6.717 7.06501 5.9535 7.78351 5.9535 9.24901C5.9535 10.7145 7.0185 12.123 7.1685 12.3225C7.3155 12.522 9.2595 15.5205 12.243 16.8105C12.948 17.118 13.503 17.2995 13.9365 17.4375C14.649 17.6655 15.2925 17.631 15.8055 17.5575C16.3755 17.4705 17.562 16.8375 17.8125 16.143C18.0585 15.447 18.0585 14.853 17.9835 14.7285C17.91 14.6025 17.7105 14.529 17.4135 14.3805Z"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_7_494">
+                  <rect width="24" height="24" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+          </div>
+          <div class="burger-telegram">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M24 12C24 15.1826 22.7357 18.2348 20.4853 20.4853C18.2348 22.7357 15.1826 24 12 24C8.8174 24 5.76516 22.7357 3.51472 20.4853C1.26428 18.2348 0 15.1826 0 12C0 8.8174 1.26428 5.76516 3.51472 3.51472C5.76516 1.26428 8.8174 0 12 0C15.1826 0 18.2348 1.26428 20.4853 3.51472C22.7357 5.76516 24 8.8174 24 12ZM12.4305 8.859C11.2635 9.345 8.9295 10.35 5.4315 11.874C4.8645 12.099 4.566 12.321 4.539 12.537C4.494 12.9015 4.9515 13.0455 5.574 13.242L5.8365 13.3245C6.4485 13.524 7.2735 13.7565 7.701 13.7655C8.091 13.7745 8.5245 13.6155 9.003 13.2855C12.2715 11.079 13.959 9.9645 14.064 9.9405C14.139 9.9225 14.244 9.9015 14.313 9.9645C14.3835 10.026 14.376 10.1445 14.3685 10.176C14.3235 10.3695 12.528 12.0375 11.5995 12.9015C11.31 13.1715 11.1045 13.362 11.0625 13.4055C10.97 13.5 10.876 13.593 10.7805 13.6845C10.2105 14.2335 9.7845 14.6445 10.803 15.3165C11.2935 15.6405 11.6865 15.906 12.078 16.173C12.504 16.464 12.93 16.7535 13.482 17.1165C13.6215 17.2065 13.7565 17.304 13.887 17.397C14.3835 17.751 14.832 18.069 15.3825 18.018C15.7035 17.988 16.035 17.688 16.203 16.788C16.6005 14.6625 17.382 10.059 17.562 8.1615C17.573 8.00376 17.5664 7.84529 17.5425 7.689C17.5284 7.56288 17.4673 7.44669 17.3715 7.3635C17.235 7.26928 17.0723 7.22047 16.9065 7.224C16.4565 7.2315 15.762 7.473 12.4305 8.859Z"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
